[gd_scene load_steps=2 format=2]

[ext_resource path="res://characters/scene_character_placement.gd" type="Script" id=1]

[node name="SceneCharacterPlacement" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[connection signal="input_event" from="." to="." method="_on_SceneCharacterPlacement_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_SceneCharacterPlacement_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SceneCharacterPlacement_mouse_exited"]
